src/test/k3s/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  rules:
    - host: keycloak.${k3s.ip}.nip.io
      http:
        paths:
          - path: /metrics
            pathType: Exact
            backend:
              service:
                name: keycloak
                port:
                  name: management
          - path: /health
            pathType: Exact
            backend:
              service:
                name: keycloak
                port:
                  name: management
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
