src/test/k3s/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
    - name: management
      port: 9000
      targetPort: management
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: keycloak
